--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
+    "uuid": "^9.0.0",
     "websocket": "^1.0.34"
   }
 }
